<resources>
    <string name="app_name" translatable="false">Chord Reader 2</string>
    <string name="about_chord_reader">About Chord Reader 2</string>
    <string name="find_chords_intro_message">First, search the web to find chords.</string>
    <string name="find_chords_second_message">Once you\'ve found the chords you want, click here.</string>
    <string name="loading">Loading…</string>
    <string name="chord_search_hint">Enter song/artist name</string>
    <string name="chords_keyword">chords</string>
    <string name="chords_found">Chords identified. Click here to confirm.</string>
    <string name="confirm_chordchart">Confirm Chords</string>
    <string name="enter_filename">Enter a filename to save to the SD card:</string>
    <string name="save_chordchart">Save Chord Chart</string>
    <string name="sd_card_not_found">SD card not found.</string>
    <string name="save_file">Save File</string>
    <string name="file_saved">File saved.</string>
    <string name="unable_to_save_file">Unable to save file.</string>
    <string name="enter_good_filename">Please enter a valid filename.</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="manage_saved_files">Manage Songs</string>
    <string name="no_saved_files">No saved files found.</string>
    <string name="search_for_chords">Search</string>
    <string name="save_chords">Save</string>
    <string name="overwrite_file">The existing file will be overwritten.</string>
    <string name="overwrite_file_title">Overwrite File</string>
    <string name="transpose">Transpose</string>
    <string name="select_files_to_delete">Select files to delete.</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_saved_file">Delete File(s)</string>
    <string name="are_you_sure">Are you sure? %d file(s) will be deleted.</string>
    <string name="files_deleted">%d file(s) deleted.</string>
    <string name="capo_title">Capo on Fret:</string>
    <string name="transpose_title">Transpose (half-steps):</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="stopping">Stopping…</string>
    <string name="transposing">Transposing</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_title">Loading</string>
    <string name="sort_az">Sort A-Z</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="edit">Edit</string>
    <string name="edit_chords">Edit Chords</string>
    <string name="no_chord_available">No fingering available.</string>
    <string name="variation" translatable="false">Var.</string>
    <string name="pref_text_size" translatable="false">text_size</string>
    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_scheme" translatable="false">color_scheme</string>
    <string name="pref_scheme_title">Color Scheme</string>
    <string name="pref_scheme_system" translatable="false">Automatic</string>
    <string name="pref_scheme_dark" translatable="false">Dark</string>
    <string name="pref_scheme_light" translatable="false">Light</string>
    <string name="pref_scheme_android" translatable="false">Android</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_basic_configuration">Basic configuration</string>
    <string name="pref_note_naming" translatable="false">note_naming</string>
    <string name="pref_note_naming_title">Note Naming</string>
    <string name="pref_note_naming_value_english" translatable="false">English</string>
    <string name="pref_note_naming_value_english_sharps" translatable="false">EnglishWithSharps</string>
    <string name="pref_note_naming_value_northern" translatable="false">NorthernEuropean</string>
    <string name="pref_note_naming_value_southern" translatable="false">SouthernEuropean</string>
    <string name="pref_note_naming_english">English</string>
    <string name="pref_note_naming_english_sharps">English with sharps</string>
    <string name="pref_note_naming_northern">Northern European</string>
    <string name="pref_note_naming_southern">Southern European</string>
    <string name="pref_note_naming_explanation_english" translatable="false">A, Bb, B, C, Db, D, etc.</string>
    <string name="pref_note_naming_explanation_english_sharps" translatable="false">A, Bb, B, C, C#, D, etc.</string>
    <string name="pref_note_naming_explanation_northern" translatable="false">A, H, C, D, etc.</string>
    <string name="pref_note_naming_explanation_southern" translatable="false">Do, Re, Mi, Fa, etc.</string>
    <string name="pref_note_naming_default" translatable="false">@string/pref_note_naming_value_english</string>
    <string name="pref_search_engine" translatable="false">searchEngineURL</string>
    <string name="pref_search_engine_default" translatable="false">https://www.startpage.com/sp/search?q=</string>
    <string name="pref_storage_location" translatable="false">storageLocation</string>
    <string name="pref_storage_location_default" translatable="false">content://com.android.externalstorage.documents/tree/primary%3Achord_reader_2</string>
    <string name="pref_instrument" translatable="false">instrument</string>
    <string name="pref_instrument_title">Instrument</string>
    <string name="pref_instrument_default" translatable="false">Guitar</string>
    <string name="settings">Settings</string>
    <string name="pref_first_run" translatable="false">first_run3</string>
    <string name="pref_first_run_title">Reset Introduction</string>
    <string name="pref_first_run_summary">Show introductory message again.</string>
    <string name="first_run_title">Welcome to Chord Reader 2!</string>
    <string name="first_run_message">" <b>What\'s new in version 2.4.2?</b>          \n <li>refactor: navigation and drawer highlighting</li> \n <li>fix: crash on song switching in setlist mode</li> \n <li>fix: issue #63 - letters followed by apostrophe incorrectly recognized as chords</li> \n <li>fix: misc crashes on navigation</li> \n <li>feature: keyboard arrow key support to scroll added to support bluetooth page turners</li>\n \n  Chord Reader 2 is <b>open source software</b>.  "</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_message">Do you want to save your changes?</string>
    <string name="closing_chordreader">Closing ChordReader</string>
    <string name="closing_chordreader_message">Sure you want to close ChordReader?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="No_BPM_found">No BPM value found. Please adjust desired value in first line.</string>
    <string name="pref_search_engine_title">Search engine URL</string>
    <string name="chord_variation_editing">Chord variation editing</string>
    <string name="no_chord_available_add">No fingering available. Please add.</string>
    <string name="new_setlist">New Setlist</string>
    <string name="manage_saved_setlists">Manage Setlists</string>
    <string name="slower_auto_scroll" translatable="false">slower auto scroll</string>
    <string name="start_auto_scroll" translatable="false">start auto-scroll</string>
    <string name="stop_auto_scroll" translatable="false">stop auto-scroll</string>
    <string name="faster_auto_scroll" translatable="false">faster auto-scroll</string>
    <string name="enter_text_to_filter">Enter text to filter</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="web_search">Web Search</string>
    <string name="songs">Songs</string>
    <string name="setlists">Setlists</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="of"> of </string>
    <string name="help">Help</string>
    <string name="file_selection_for_setlist">Select songs for setlist</string>
    <string name="no_local_songs">No songs found on your device. Perform a web search.</string>
    <string name="no_setlists">No setlists stored on your device. Create a new one.</string>
    <string name="add_to_setlist">Add to a setlist</string>
    <string name="storage_location">Storage location</string>
    <string name="share">Share</string>
    <string name="pref_category_musical_configuration">Musical configuration</string>
    <string name="pref_laterality" translatable="false">laterality</string>
    <string name="pref_laterality_title">Laterality for chord visualization</string>
    <string name="pref_laterality_default" translatable="false">right</string>
    <string name="pref_wake_lock_duration" translatable="false">wake_lock_duration_list</string>
    <string name="wake_lock_duration_title">Minutes to keep screen on in Song View</string>
    <string name="pref_wake_lock_default" translatable="false">5</string>
</resources>