<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_appearance">

        <ListPreference
            android:defaultValue="@string/pref_scheme_system"
            android:entries="@array/color_schemes"
            android:entryValues="@array/color_schemes"
            android:key="@string/pref_scheme"
            android:persistent="true"
            android:title="@string/pref_scheme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_basic_configuration">

        <Preference
            android:defaultValue="@string/pref_storage_location_default"
            android:key="@string/pref_storage_location"
            android:persistent="true"
            android:title="@string/storage_location" />

        <EditTextPreference
            android:defaultValue="@string/pref_search_engine_default"
            android:key="searchEngineURL"
            android:persistent="true"
            android:title="@string/pref_search_engine_title" />

        <ListPreference
            android:defaultValue="@string/pref_wake_lock_default"
            android:key="@string/pref_wake_lock_duration"
            android:persistent="true"
            android:title="@string/wake_lock_duration_title"
            android:entries="@array/wake_lock_duration_list"
            android:entryValues="@array/wake_lock_duration_list"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_first_run"
            android:persistent="true"
            android:summary="@string/pref_first_run_summary"
            android:title="@string/pref_first_run_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_musical_configuration">
        <Preference
            android:defaultValue="@string/pref_note_naming_default"
            android:key="@string/pref_note_naming"
            android:persistent="true"
            android:title="@string/pref_note_naming_title" />

        <ListPreference
            android:defaultValue="@string/pref_instrument_default"
            android:key="@string/pref_instrument"
            android:persistent="true"
            android:title="@string/pref_instrument_title"
            android:entries="@array/instruments"
            android:entryValues="@array/instruments_values"/>

        <ListPreference
            android:defaultValue="@string/pref_laterality_default"
            android:key="@string/pref_laterality"
            android:persistent="true"
            android:title="@string/pref_laterality_title"
            android:entries="@array/laterality"
            android:entryValues="@array/laterality_values"/>

    </PreferenceCategory>

</PreferenceScreen>
