<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort_by"
        android:alphabeticShortcut="@string/sort_by_date"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort_by_date"
        android:visible="false"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_new_file"
        android:alphabeticShortcut="@string/new_file"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_file"
        android:visible="false"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_manage_files"
        android:alphabeticShortcut="@string/manage_saved_files"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/manage_saved_files"
        android:visible="false"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/menu_cancel_selection"
        android:icon="@drawable/ic_dialog_cancel"
        app:showAsAction="ifRoom|withText"
        android:title="@string/cancel"
        android:visible="false"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_menu_select_all"
        app:showAsAction="ifRoom|withText"
        android:title="@string/select_all"
        android:visible="false"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="always|withText"
        android:title="@string/delete"
        android:visible="false"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_share_files"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always|withText"
        tools:ignore="AppCompatResource" />

</menu>