<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

<RelativeLayout
    android:id="@+id/start_activity_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextureView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/blue_glow"
        android:paddingStart="25dp"
        android:paddingTop="30dp"
        android:paddingEnd="25dp"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/button_web_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/progress_horizontal"
            android:padding="10dp"
            android:text="@string/web_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_local_songs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_web_search"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/progress_horizontal"
            android:padding="10dp"
            android:text="@string/songs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_web_search" />

        <Button
            android:id="@+id/button_set_lists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_local_songs"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/progress_horizontal"
            android:padding="10dp"
            android:text="@string/setlists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_local_songs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
</layout>