<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="org.hollowbamboo.chordreader2.ui.StartFragment"
        android:label="Chord Reader 2"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_nav_start_to_webSearchFragment"
            app:destination="@id/nav_web_search" />
        <action
            android:id="@+id/action_nav_start_to_ListFragment"
            app:destination="@id/nav_list_view" />
    </fragment>
    <fragment
        android:id="@+id/nav_help"
        android:name="org.hollowbamboo.chordreader2.ui.HelpFragment"
        android:label="@string/help" >
        <argument
            android:name="sectionID"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_web_search"
        android:name="org.hollowbamboo.chordreader2.ui.WebSearchFragment"
        android:label="@string/web_search" >
        <action
            android:id="@+id/action_webSearchFragment_to_nav_start"
            app:destination="@id/nav_start" />
        <action
            android:id="@+id/action_nav_web_search_to_nav_song_view"
            app:destination="@id/nav_song_view" >
            <argument
                android:name="filename"
                android:defaultValue="" />
        </action>
        <argument
            android:name="searchText"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="url"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_song_view"
        android:name="org.hollowbamboo.chordreader2.ui.SongViewFragment">
        <action
            android:id="@+id/action_SongViewFragment_to_nav_start"
            app:destination="@id/nav_start" />
        <action
            android:id="@+id/action_nav_song_view_to_nav_web_search"
            app:destination="@id/nav_web_search" />
        <argument
            android:name="songTitle"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="filename"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="chordText"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="bpm"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_nav_song_view_to_nav_chord_dict_edit"
            app:destination="@id/nav_chord_dict_edit" />
        <action
            android:id="@+id/action_nav_song_view_self"
            app:destination="@id/nav_song_view"
            app:popUpTo="@id/nav_drag_list_view" />
        <argument
            android:name="noteNaming"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_list_view"
        android:name="org.hollowbamboo.chordreader2.ui.ListFragment" >
        <action
            android:id="@+id/action_ListFragment_to_nav_start"
            app:destination="@id/nav_start" />
        <action
            android:id="@+id/action_nav_list_fragment_to_nav_web_search"
            app:destination="@id/nav_web_search" />
        <action
            android:id="@+id/action_nav_list_fragment_to_nav_song_view"
            app:destination="@id/nav_song_view" />
        <argument
            android:name="mode"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_list_view_songs_self"
            app:destination="@id/nav_list_view" />
        <action
            android:id="@+id/action_nav_list_view_to_nav_drag_list_view"
            app:destination="@id/nav_drag_list_view" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="org.hollowbamboo.chordreader2.ui.SettingsFragment"
        android:label="@string/settings">
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="org.hollowbamboo.chordreader2.ui.AboutFragment"
        android:label="@string/about">
    </fragment>
    <fragment
        android:id="@+id/nav_chord_dict_edit"
        android:name="org.hollowbamboo.chordreader2.ui.ChordDictionaryEditFragment">
        <argument
            android:name="chord"
            app:argType="org.hollowbamboo.chordreader2.chords.Chord" />
        <action
            android:id="@+id/action_nav_chord_dict_edit_to_nav_song_view"
            app:destination="@id/nav_song_view"
            app:popUpTo="@id/nav_song_view" />
    </fragment>
    <fragment
        android:id="@+id/nav_drag_list_view"
        android:name="org.hollowbamboo.chordreader2.ui.DraggableListFragment" >
        <action
            android:id="@+id/action_nav_drag_list_view_to_nav_song_view"
            app:destination="@id/nav_song_view" />
        <action
            android:id="@+id/action_nav_drag_list_view_to_nav_list_view"
            app:destination="@id/nav_list_view" />
    </fragment>
    <action
        android:id="@+id/action_drawer_to_ListFragment"
        app:destination="@id/nav_list_view"
        app:popUpTo="@id/nav_start" />
    <action
        android:id="@+id/action_drawer_to_WebSearchFragment"
        app:destination="@id/nav_web_search"
        app:popUpTo="@id/nav_start" />
    <action
        android:id="@+id/action_drawer_to_HelpFragment"
        app:destination="@id/nav_help" />
</navigation>